fix: fixed active color on dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -51,13 +51,28 @@
   font-weight: 600 !important;
 }
 
+html[data-theme="dark"] .menu__link--active {
+  color: #1b84ff !important;
+  font-weight: 600 !important;
+}
+
 .theme-doc-markdown a {
   color: #2a68ee;
   text-decoration: none;
 }
 
+html[data-theme="dark"] .theme-doc-markdown a {
+  color: #1b84ff !important;
+  font-weight: 600 !important;
+}
+
 .table-of-contents__link--active {
   color: #2a68ee !important;
+  font-weight: 600 !important;
+}
+
+html[data-theme="dark"] .table-of-contents__link--active {
+  color: #1b84ff !important;
   font-weight: 600 !important;
 }
 
@@ -73,8 +88,18 @@ code {
   padding: 2px 4px;
   border-radius: 4px;
 }
+
+html[data-theme="dark"] code {
+  color: #1b84ff !important;
+  font-weight: 600 !important;
+}
+
 .theme-edit-this-page {
   color: #2a68ee !important;
+}
+
+html[data-theme="dark"] .theme-edit-this-page {
+  color: #1b84ff !important;
 }
 
 /* SECTION MAIN DOCS VIEW */
@@ -100,6 +125,9 @@ code {
 
   .col {
     width: 70vw;
+  }
+  .theme-doc-sidebar-menu {
+    margin-right: 10px;
   }
 }
 
@@ -195,12 +223,22 @@ code {
   color: #2a68ee !important;
 }
 
+html[data-theme="dark"] .navbar__link--active {
+  color: #1b84ff !important;
+}
+
 .navbar__link--active:hover {
   color: #1e4aa9 !important;
 }
 
 .breadcrumbs__item--active .breadcrumbs__link {
   color: #2a68ee !important;
+  background-color: rgba(42, 104, 238, 0.1);
+  border-radius: 9999px;
+}
+
+html[data-theme="dark"] .breadcrumbs__item--active .breadcrumbs__link {
+  color: #1b84ff !important;
   background-color: rgba(42, 104, 238, 0.1);
   border-radius: 9999px;
 }
@@ -321,6 +359,10 @@ html[data-theme="light"] .footer {
   color: #2a68ee;
 }
 
+html[data-theme="dark"] .pagination-nav__link {
+  color: #1b84ff !important;
+}
+
 .pagination-nav__link:hover {
   color: #1e4aa9;
   border-color: #1e4aa9;
@@ -329,6 +371,10 @@ html[data-theme="light"] .footer {
 .pagination-nav__label {
   color: #2a68ee;
   font-weight: 600;
+}
+
+html[data-theme="dark"] .pagination-nav__label {
+  color: #1b84ff !important;
 }
 
 .menu__caret {
